Added the PATCH /compiled_url & /cover_art endpoints to the API.
